Reorganize test suite